fixing some color contrast issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  background-size: cover;
 }.bg-rooms {
   background-image: url("../public/rooms.jpg");
   background-position: center;
